deploy/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-body-size: "512m"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: medicos.com # host que usaramos para acessar nossa api
    http:
      paths:
      - pathType: Prefix
        path: "/" # partiremos da raiz
        backend:
          service:
            name: svc-voll-med-api # selecionamos o serviço que aponta para nosso deployment
            port:
              number: 8081 # porta de entrada do serviço
